[gd_scene load_steps=24 format=3 uid="uid://stlht8n3ip4q"]

[ext_resource type="Script" uid="uid://dqrth2ykf57a2" path="res://Scripts/Enemy/Boar/boar.gd" id="1_eqh40"]
[ext_resource type="Texture2D" uid="uid://bldexysby81t3" path="res://Assets/Enemy/Boar/boar.png" id="2_nvvbs"]
[ext_resource type="Script" uid="uid://ccmsl3hn6pt17" path="res://Scripts/Components/state_machine.gd" id="2_sbg87"]
[ext_resource type="Script" uid="uid://6bxb40ub8q5l" path="res://Scripts/Enemy/Boar/boar_idle_state.gd" id="3_r8nra"]
[ext_resource type="Script" uid="uid://l55sxg06wi12" path="res://Scripts/Enemy/Boar/boar_roam_state.gd" id="4_0n0j6"]
[ext_resource type="Texture2D" uid="uid://c32x8b7vbek46" path="res://Assets/Enemy/enemy_heart.png" id="5_d40jh"]
[ext_resource type="Script" uid="uid://ci4dyyvi2xpt2" path="res://Scripts/Enemy/Boar/boar_run_state.gd" id="5_ekrjj"]
[ext_resource type="Script" uid="uid://dyxi1dxq7adra" path="res://Scripts/Enemy/Boar/boar_attack_state.gd" id="6_sbg87"]
[ext_resource type="Script" uid="uid://wwvg2nsehi8p" path="res://Scripts/Enemy/Boar/boar_death_state.gd" id="7_skphb"]
[ext_resource type="PackedScene" uid="uid://cn0kgmlc8e887" path="res://Scenes/Components/health_component.tscn" id="9_5drtv"]
[ext_resource type="PackedScene" uid="uid://bg4v14wuqkcnp" path="res://Scenes/Components/healthbox_component.tscn" id="10_skphb"]
[ext_resource type="PackedScene" uid="uid://c2sp55knojytm" path="res://Scenes/Components/hitbox_component.tscn" id="10_vu5fv"]
[ext_resource type="Script" uid="uid://bsqrlaath6rv7" path="res://Scripts/Components/attack.gd" id="11_gaukh"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dmwl5"]
radius = 6.0
height = 26.0

[sub_resource type="Animation" id="Animation_gx76c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitboxComponent/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_kiqm3"]
resource_name = "attack"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitboxComponent/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.14997812, 0.35162333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_4ad2a"]
resource_name = "idle"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_d40jh"]
resource_name = "roam"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_pqgp3"]
resource_name = "run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gx76c"]
_data = {
&"RESET": SubResource("Animation_gx76c"),
&"attack": SubResource("Animation_kiqm3"),
&"idle": SubResource("Animation_4ad2a"),
&"roam": SubResource("Animation_d40jh"),
&"run": SubResource("Animation_pqgp3")
}

[sub_resource type="Resource" id="Resource_gaukh"]
script = ExtResource("11_gaukh")
attack_damage = 1.0
metadata/_custom_type_script = "uid://bsqrlaath6rv7"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gaukh"]
size = Vector2(22, 25)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5drtv"]
radius = 6.0
height = 26.0

[node name="Boar" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 4
script = ExtResource("1_eqh40")
x_direction = 1.0

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_sbg87")
initial_state = NodePath("Roam")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("boar")]
script = ExtResource("3_r8nra")
boar = NodePath("../..")

[node name="Roam" type="Node" parent="StateMachine" node_paths=PackedStringArray("boar")]
script = ExtResource("4_0n0j6")
boar = NodePath("../..")
metadata/_custom_type_script = "uid://dwhs8y2wi44wr"

[node name="Run" type="Node" parent="StateMachine" node_paths=PackedStringArray("boar")]
script = ExtResource("5_ekrjj")
boar = NodePath("../..")
metadata/_custom_type_script = "uid://dwhs8y2wi44wr"

[node name="Attack" type="Node" parent="StateMachine" node_paths=PackedStringArray("boar")]
script = ExtResource("6_sbg87")
boar = NodePath("../..")
metadata/_custom_type_script = "uid://dwhs8y2wi44wr"

[node name="Death" type="Node" parent="StateMachine" node_paths=PackedStringArray("boar")]
script = ExtResource("7_skphb")
boar = NodePath("../..")
metadata/_custom_type_script = "uid://dwhs8y2wi44wr"

[node name="BodySprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(1, -8)
texture = ExtResource("2_nvvbs")
hframes = 6
vframes = 4

[node name="HealthSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -9)
texture = ExtResource("5_d40jh")
hframes = 6
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 2)
rotation = -1.5707964
shape = SubResource("CapsuleShape2D_dmwl5")

[node name="Animations" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_gx76c")
}

[node name="RoamLeft" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(-26, 0)
collision_mask = 5

[node name="RoamRight" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(26, 0)
collision_mask = 5

[node name="AttackLeft" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(-18, 0)
collision_mask = 2

[node name="AttackRight" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(19, 0)
collision_mask = 2

[node name="HitboxComponent" parent="." instance=ExtResource("10_vu5fv")]
unique_name_in_owner = true
collision_mask = 2
attack = SubResource("Resource_gaukh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(0, -4.5)
shape = SubResource("RectangleShape2D_gaukh")
disabled = true
debug_color = Color(0.946732, 0.22020167, 0.19805482, 0.41960785)

[node name="HealthComponent" parent="." node_paths=PackedStringArray("death_state", "state_machine") instance=ExtResource("9_5drtv")]
unique_name_in_owner = true
MAX_HEALTH = 5
death_state = NodePath("../StateMachine/Death")
state_machine = NodePath("../StateMachine")

[node name="HealthboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("10_skphb")]
unique_name_in_owner = true
collision_layer = 4
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HealthboxComponent"]
position = Vector2(1, 2)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_5drtv")
debug_color = Color(0, 0.6406879, 0.35085, 0.41960785)
